--- a/public/index.html
+++ b/public/index.html
@@ -51,11 +51,11 @@
           required
           autocomplete="on"
         />
-        <div class="d-flex flex-row">
-          <button type="reset" class="btn btn-outline-dark pt-2" id="login-button" onclick="login()">
+        <div class="d-flex flex-row justify-content-center pt-3">
+          <button type="reset" class="btn btn-outline-dark pt-2 mx-1" id="login-button" onclick="login()">
             Log in
           </button>
-          <button type="reset" class="btn btn-outline-dark pt-2" id="signup-button" onclick="signup()">
+          <button type="reset" class="btn btn-outline-dark pt-2 mx-1" id="signup-button" onclick="signup()">
             Sign Up
           </button>
         </div>
