update script imports

--- a/public/recipeCatalog.html
+++ b/public/recipeCatalog.html
@@ -13,8 +13,8 @@
     />
     <link rel="stylesheet" href="../globalStyles.css" />
 
-    <script src="../favorite.js"></script>
-    <script src="../displayRecipe.js"></script>
+    <script src="favorite.js"></script>
+    <script src="displayRecipe.js"></script>
   </head>
   <body>
     <!-- recipe catalog page -->
