--- a/public/recipePage.html
+++ b/public/recipePage.html
@@ -13,8 +13,8 @@
     />
     <link rel="stylesheet" href="../globalStyles.css" />
 
-    <script src="../favorite.js"></script>
-    <script src="../displayRecipePage.js"></script>
+    <script src="favorite.js"></script>
+    <script src="displayRecipePage.js"></script>
   </head>
   <body>
     <!-- view a recipe page -->
