--- a/public/uploadRecipe.html
+++ b/public/uploadRecipe.html
@@ -13,9 +13,9 @@
     />
     <link rel="stylesheet" href="../globalStyles.css" />
 
-    <script src="../favorite.js"></script>
-    <script src="../login.js"></script>
-    <script src="../uploadRecipe.js"></script>
+    <script src="favorite.js"></script>
+    <script src="login.js"></script>
+    <script src="uploadRecipe.js"></script>
   </head>
   <body>
     <!-- navbar -->
