--- a/public/recipePage.html
+++ b/public/recipePage.html
@@ -12,9 +12,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../globalStyles.css" />
-
-    <script src="favorite.js"></script>
-    <script src="displayRecipePage.js"></script>
   </head>
   <body>
     <!-- view a recipe page -->
@@ -47,7 +44,7 @@
               src="/assets/heart-circle.svg"
               alt="favorite recipe icon"
               width="50"
-              onclick="favoriteRecipe()"
+              onclick="favorite.favorite(this)"
             />
           </div>
         </div>
@@ -138,6 +135,7 @@ Write your comment here</textarea
       </div>
     </footer>
 
+    <script src="displayRecipePage.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
