--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="globalStyles.css" />
+    <link rel="stylesheet" href="src/components/globalStyles.css" />
     <script src="displayRecipe.js"></script>
     <script src="favorite.js"></script>
     <script src="randomJoke.js"></script>
